--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.dzh.filemanagement.activity.MainActivity" >
+    tools:context="com.dzh.filemanagement.activity.FileBrowseActivity" >
 
     <!-- <item
         android:id="@+id/action_settings"
