--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,253 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_main"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:id="@+id/activity_file"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+   >
 
-
-    <include
-        android:id="@+id/nothing"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        layout="@layout/nothing"
-        android:visibility="invisible" />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/center_frame"
-        ></FrameLayout>
-</RelativeLayout>
+        android:fitsSystemWindows="true">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/file_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:background="@color/colorPrimary"
+                app:contentInsetStart="0dp"
+                app:titleTextColor="#fff">
+
+                <ImageView
+                    android:id="@+id/content_hamburger"
+                    style="@style/ImageView.Hamburger"
+                    android:layout_gravity="left"
+                    android:src="@drawable/ic_menu" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center_vertical"
+                    android:text="@string/title"
+                    android:textColor="@color/textColor2"
+                    android:textSize="21sp" />
+
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="47dp"
+            android:background="@color/backGround">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/colorPrimary" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp">
+
+                <LinearLayout
+                    android:id="@+id/file_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_select"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingBottom="12dp"
+                    android:paddingTop="12dp"
+                    android:translationZ="5dp">
+
+                    <TextView
+                        style="@style/file_bottom_text"
+                        android:text="@string/all"
+                        android:textColor="@color/textColor" />
+
+                    <TextView
+                        android:id="@+id/total_number"
+                        style="@style/file_bottom_text"
+                        android:text="@string/reading"
+                        android:textColor="@color/textColor"
+                        android:textSize="19sp" />
+
+                    <TextView
+                        style="@style/file_bottom_text"
+                        android:paddingLeft="4dp"
+                        android:text="@string/gb"
+                        android:textColor="@color/textColor" />
+
+                    <TextView
+                        style="@style/file_bottom_text"
+                        android:paddingLeft="21dp"
+                        android:text="@string/last"
+                        android:textColor="@color/textColor" />
+
+                    <TextView
+                        android:id="@+id/free_number"
+                        style="@style/file_bottom_text"
+                        android:text="正在读取"
+                        android:textColor="@color/textColor"
+                        android:textSize="19sp" />
+
+                    <TextView
+                        style="@style/file_bottom_text"
+                        android:paddingLeft="4dp"
+                        android:text="@string/gb"
+                        android:textColor="@color/textColor" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/file_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView style="@style/file_cardView">
+
+                            <LinearLayout
+                                android:id="@+id/file_image"
+                                style="@style/file_gride">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/file_image"
+                                  />
+
+                                <TextView
+                                    style="@style/file_gride_text"
+                                    android:text="@string/image" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView style="@style/file_cardView">
+
+                            <LinearLayout
+                                android:id="@+id/file_video"
+                                style="@style/file_gride">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/file_video" />
+
+                                <TextView
+                                    style="@style/file_gride_text"
+                                    android:text="@string/video" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView style="@style/file_cardView">
+
+                            <LinearLayout
+                                android:id="@+id/file_music"
+                                style="@style/file_gride">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/file_music" />
+
+                                <TextView
+                                    style="@style/file_gride_text"
+                                    android:text="@string/music" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <androidx.cardview.widget.CardView style="@style/file_cardView">
+
+                            <LinearLayout
+                                android:id="@+id/file_word"
+                                style="@style/file_gride">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/file_word" />
+
+                                <TextView
+                                    style="@style/file_gride_text"
+                                    android:text="@string/doc" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView style="@style/file_cardView">
+
+                            <LinearLayout
+                                android:id="@+id/file_apk"
+                                style="@style/file_gride">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/file_apk" />
+
+                                <TextView
+                                    style="@style/file_gride_text"
+                                    android:text="@string/apk" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView style="@style/file_cardView">
+
+                            <LinearLayout
+                                android:id="@+id/file_zip"
+                                style="@style/file_gride">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/file_zip" />
+
+                                <TextView
+                                    style="@style/file_gride_text"
+                                    android:text="@string/zip" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        </RelativeLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
+
+
