--- a/app/src/main/res/layout/activity_memory.xml
+++ b/app/src/main/res/layout/activity_memory.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/Detial_toolbar"
             android:layout_width="match_parent"
             android:layout_height="49dp"
@@ -31,7 +31,7 @@
                 android:text="设备信息"
                 android:textColor="@color/textColor2"
                 android:textSize="21sp"/>
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
