--- a/app/src/main/res/layout/fragment_file_type.xml
+++ b/app/src/main/res/layout/fragment_file_type.xml
@@ -59,17 +59,17 @@
             android:textSize="12sp"
             />
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <androidx.core.widget.SwipeRefreshLayout
             android:id="@+id/filename_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/id_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:dividerHeight="10dp"/>
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </androidx.core.widget.SwipeRefreshLayout>
 
     </RelativeLayout>
 
