--- a/app/src/main/res/layout/guillotine.xml
+++ b/app/src/main/res/layout/guillotine.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimary"
-    tools:context="com.dzh.filemanagement.activity.FileActivity"
+    tools:context="com.dzh.filemanagement.activity.MainActivity"
     android:fitsSystemWindows="true"
     android:id="@+id/guillotine"
     >
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         style="@style/Toolbar"
         android:fitsSystemWindows="true"
         app:contentInsetStart="0dp"
@@ -21,9 +21,9 @@
             android:id="@+id/guillotine_hamburger"
             style="@style/ImageView.Hamburger"
             android:src="@drawable/ic_menu_90"/>
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
     
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/menu_header"
         android:layout_width="match_parent"
         android:layout_height="230dp"
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="快客文件管理器"
+                android:text="快客文件压缩器"
                 android:textColor="#388cff"
                 android:textSize="21sp"
                 android:textStyle="bold"/>
@@ -58,7 +58,7 @@
                 android:layout_centerHorizontal="true"
                 android:id="@+id/textView"/>
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
     
     <LinearLayout
         android:layout_below="@id/menu_header"
@@ -67,7 +67,7 @@
         android:layout_marginTop="40dp"
         android:orientation="vertical">
         
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -100,9 +100,9 @@
                 android:textColor="#fff"
                 android:textSize="21sp"/>
         </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
         
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -135,9 +135,9 @@
                 android:textColor="#fff"
                 android:textSize="21sp"/>
         </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
         
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="12dp"
@@ -170,9 +170,9 @@ android:background="@color/colorPrimary"
                 android:textColor="#fff"
                 android:textSize="21sp"/>
         </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
         
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -204,7 +204,7 @@ android:background="@color/colorPrimary"
                 android:textColor="#fff"
                 android:textSize="21sp"/>
         </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <TextView
