--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             android:padding="7dp"
             >
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="3dp">
@@ -36,7 +36,7 @@
                     android:background="#000"
                     android:src="@mipmap/file_video"
                     android:padding="2dp"/>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/item_video_name"
@@ -55,4 +55,4 @@
             android:text="删除"
             android:textSize="21sp"/>
     </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
