增加图片，视频，音乐 UI

--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -13,4 +13,6 @@
     <include layout="@layout/show_toolbar"/>
 
     <include layout="@layout/show_list"/>
+
+    <include layout="@layout/show_bottom_bar"/>
 </LinearLayout>
