--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -10,5 +10,5 @@
     <include layout="@layout/show_toolbar"/>
 
     <include layout="@layout/show_list"/>
-
+    <include layout="@layout/show_bottom_bar"/>
 </LinearLayout>
