--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:translationZ="5dp"
-    >
+    android:layout_margin="2dp"
+    android:translationZ="5dp">
 
-    <com.mcxtzhang.swipemenulib.SwipeMenuLayout
+    <RelativeLayout
+        android:id="@+id/rl_album_photo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        >
-
+        android:layout_height="@dimen/x82"
+        android:layout_margin="@dimen/x1">
         <ImageView
             android:id="@+id/id_num"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            />
-
-        <TextView
-            android:id="@+id/item_image_delete"
-            style="@style/file_item_select"
-            android:text="删除"
-            android:background="#ff0000"/>
-    </com.mcxtzhang.swipemenulib.SwipeMenuLayout>
-
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:layout_margin="@dimen/x1"
+            android:scaleType="center" />
+        <View
+            android:id="@+id/view_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
