--- a/app/src/main/res/layout/show_list.xml
+++ b/app/src/main/res/layout/show_list.xml
@@ -3,7 +3,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
     android:layout_width="match_parent"
     >
 
