--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="white">#FFFFFF</color>
     <color name="blue">#0066FF</color>
+    <color name="colorTheme">#036cfc</color>
     <color name="no_color">#00000000</color>
     <color name="black">#000000</color>
     <color name="text_color">#434343</color>
